--- a/hub.html
+++ b/hub.html
@@ -25,7 +25,7 @@
       <div>
       </div> </button>
     </div>
-  
+  </div>
     <nav class="nav">
         <span class="span">
           <img class="img" src="clafiya/GreenLogo.png" alt="GreenLogo" width="123"></span>
@@ -58,26 +58,14 @@
           </button>
           </span>
    </nav>
-   </div>
-      <div class="access">
-      <h2 class="access-head">
-        Accessing Health and Wellness Through Health Savings Accounts
-      </h2>
-      <div class="joint">
-        <p class="access-para">
-          Your HSA is your key to saving big on health and wellness needs,
-          earning interest, and enjoying discounted healthcare services from our
-          parthners
-        </p>
-        <div class="btn-con">
-          <button class="startbtn">Get Started
-             <span class="start-stroke">
-            <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 448 512" height="1em" width="1em" xmlns="http://www.w3.org/2000/svg">
-              <path d="M438.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-160-160c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L338.8 224 32 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l306.7 0L233.4 393.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l160-160z"></path></svg> </span>
-         </button>
-        
-          <button class="learnbtn">Learn about HSA</button>
-      </div>
-    </div>
+     
+<div class="hub">
+    <p>
+        <span>
+<img src="clafiya/location.svg" alt="#">
+    </span>
+        Health and Wellness Hub
+    </p>
+</div>
 
 </html>
