new image added change of fonts , animation

--- a/hub.html
+++ b/hub.html
@@ -58,13 +58,167 @@
           </button>
           </span>
    </nav>
-     
+     <div class="flex">
 <div class="hub">
-    <p>
+    <p class="hub-p">
     <span>
 <img src="clafiya/location.svg" alt="#">
     </span>
         Health and Wellness Hub
     </p>
+    <h2 class="hub-head">Your Comprehensive Health And Wellness Marketplace</h2>
+
+    <p class="hub2">Introducing Your One-Stop Shop 
+    For All Your Health And Wellness 
+    Needs. Find everything from gyms     to spas, hospitals to mental    health centers near you with     exclusive discounts up to 30% and
+ easy payments with your Health Savings Account (HSA)</p>
+ 
+ <span>  <button class="btn-getstarted">
+  Get Started 
+  <span class="get-stroke">
+    <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 448 512" height="1em" width="1em" xmlns="http://www.w3.org/2000/svg">
+      <path d="M438.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-160-160c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L338.8 224 32 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l306.7 0L233.4 393.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l160-160z"></path></svg>
+  </span>
+  </button></span>
 </div>
+<span>
+    <img src="clafiya/hero hub.svg" alt="#">
+ </span>
+</div>
+
+  <div class="swiper">
+        <div class="swiper-wrapper">
+           <div class="swiper-slide" style="z-index: 2;">
+               <span class="swiper-image">
+               <img src="clafiya/logo7) (2).png" alt="logo" width="140">
+              </span>
+              </div>
+           <div class="swiper-slide" style="z-index: 1;">     
+                 <span class="swiper-image">
+<img src="clafiya/logo8).png" alt="logo8" width="140" height="149">
+                  </span>
+                  </div>
+           <div class="swiper-slide" style="z-index: 0;">
+                   <span class="swiper-image">
+<img src="clafiya/logo9).png" alt="logo9" width="140">
+                    </span>
+                    </div>
+          <div class="swiper-slide" style="z-index: 8;">
+          <span class="swiper-image">
+<img src="clafiya/logo5) (1).png" alt="logo1" width="140">
+             </span>
+             </div>
+             <div class="swiper-slide" style="z-index: 7;">
+            <span class="swiper-image">
+<img src="clafiya/logo2).png" alt="logo2" width="140">
+               </span>
+               </div>
+               <div class="swiper-slide" style="z-index: 6;">
+              <span class="swiper-image">
+            <img src="clafiya/logo3).png" alt="logo3" width="140">
+            </span>
+            </div>
+            <div class="swiper-slide" style="z-index: 5;">
+         <span class="swiper-image">
+<img src="clafiya/logo4).png" alt="logo4" width="140" >
+           </span>
+           </div>
+           <div class="swiper-slide" style="z-index: 4;">
+            <span class="swiper-image">
+<img src="clafiya/logo1) (5).png" alt="logo5" width="140">
+             </span>
+             </div>
+             <div class="swiper-slide" style="z-index: 3;">
+              <span class="swiper-image">
+                <img src="clafiya/logo6).png" alt="logo7" width="140">
+              </span>
+              </div>
+              <div class="swiper-slide" style="z-index: 2;">
+               <span class="swiper-image">
+               <img src="clafiya/logo7) (2).png" alt="logo" width="140">
+              </span>
+              </div>
+              <div class="swiper-slide" style="z-index: 1;">     
+                 <span class="swiper-image">
+<img src="clafiya/logo8).png" alt="logo8" width="140" height="149">
+                  </span>
+                  </div>
+                  <div class="swiper-slide" style="z-index: 0;">
+                   <span class="swiper-image">
+<img src="clafiya/logo9).png" alt="logo9" width="140">
+                    </span>
+                    </div>
+        </div> 
+        <div class="swiper-wrapper swiper-wrapper-2">
+           <div class="swiper-slide" style="z-index: 2;">
+               <span class="swiper-image">
+               <img src="clafiya/logo7) (2).png" alt="logo" width="140">
+              </span>
+              </div>
+           <div class="swiper-slide" style="z-index: 1;">     
+                 <span class="swiper-image">
+<img src="clafiya/logo8).png" alt="logo8" width="140" height="149">
+                  </span>
+                  </div>
+           <div class="swiper-slide" style="z-index: 0;">
+                   <span class="swiper-image">
+<img src="clafiya/logo9).png" alt="logo9" width="140">
+                    </span>
+                    </div>
+          <div class="swiper-slide" style="z-index: 8;">
+          <span class="swiper-image">
+<img src="clafiya/logo5) (1).png" alt="logo1" width="140">
+             </span>
+             </div>
+             <div class="swiper-slide" style="z-index: 7;">
+            <span class="swiper-image">
+<img src="clafiya/logo2).png" alt="logo2" width="140">
+               </span>
+               </div>
+               <div class="swiper-slide" style="z-index: 6;">
+              <span class="swiper-image">
+            <img src="clafiya/logo3).png" alt="logo3" width="140">
+            </span>
+            </div>
+            <div class="swiper-slide" style="z-index: 5;">
+         <span class="swiper-image">
+<img src="clafiya/logo4).png" alt="logo4" width="140" >
+           </span>
+           </div>
+           <div class="swiper-slide" style="z-index: 4;">
+            <span class="swiper-image">
+<img src="clafiya/logo1) (5).png" alt="logo5" width="140">
+             </span>
+             </div>
+             <div class="swiper-slide" style="z-index: 3;">
+              <span class="swiper-image">
+                <img src="clafiya/logo6).png" alt="logo7" width="140">
+              </span>
+              </div>
+              <div class="swiper-slide" style="z-index: 2;">
+               <span class="swiper-image">
+               <img src="clafiya/logo7) (2).png" alt="logo" width="140">
+              </span>
+              </div>
+              <div class="swiper-slide" style="z-index: 1;">     
+                 <span class="swiper-image">
+<img src="clafiya/logo8).png" alt="logo8" width="140" height="149">
+                  </span>
+                  </div>
+                  <div class="swiper-slide" style="z-index: 0;">
+                   <span class="swiper-image">
+<img src="clafiya/logo9).png" alt="logo9" width="140">
+                    </span>
+                    </div>
+        </div> 
+      </div>
+
+      <div class="hero">
+<span><img src="clafiya/featured.svg" alt="#"></span>
+<div class="explore">
+    <h1 class="header">Explore</h1>
+<p class="paragragh">Access a marketplace of holistic health and wellness merchants, such as hospitals, pharmacies, spas, gyms, mental health, skincare, and more to support you on your wellness journey.</p>
+      </div>
+      </div>
+</body>
 </html>
