styling texts and images

--- a/hub.html
+++ b/hub.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Wellness Hub | Clafiya| Get Quality</title>
     <link rel="stylesheet" href="hub.css" />
       <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -81,7 +81,7 @@
   </span>
   </button></span>
 </div>
-<span>
+<span style="  margin-top: 250px;">
     <img src="clafiya/hero hub.svg" alt="#">
  </span>
 </div>
@@ -216,9 +216,100 @@
       <div class="hero">
 <span><img src="clafiya/featured.svg" alt="#"></span>
 <div class="explore">
-    <h1 class="header">Explore</h1>
+
+   <div class="slides">
+     <h3 class="header">Explore </h3>
+     <span class="sli">
+      <h3>Diagonist</h3>
+      <h3>dental care</h3>
+      <h3>skin care</h3>
+      <h3>eye care</h3>
+      <h3></h3>
+      <h3>mental health</h3>
+   <h3> hospitals</h3>
+    <h3>phermacies</h3>
+    <h3>gyms</h3>
+    <h3>spas</h3>
+    </span>
+   </div>
 <p class="paragragh">Access a marketplace of holistic health and wellness merchants, such as hospitals, pharmacies, spas, gyms, mental health, skincare, and more to support you on your wellness journey.</p>
-      </div>
-      </div>
+     <div class="hsa-tags">
+<div class="hsa-wallet">
+  <img src="clafiya/easy.png" alt="easy" >
+<div class="wallet-content"> <h4 class="wallet-head2">Easy access to top-tier care</h4>
+  <p class="wallet-para">Discover trusted health and wellness centers, from hospitals and pharmacies to spas and gyms, for all your needs.</p>
+</div>
+</div>
+   
+<div class="hsa-wallet"><img src="clafiya/benefits.png" alt="benefits" >
+<div class="wallet-content"> <h4 class="wallet-head2">Exclusive discounts </h4>
+
+<p class="wallet-para">Get up to 30% off health and wellness products and services from our partners.
+</p>
+</div>
+  
+</div>
+<div class="hsa-wallet"> <img src="clafiya/quick.png" alt="quick" >
+<div class="wallet-content"> <h4 class="wallet-head2">Quick, easy payment</h4>
+<p class="wallet-para"> Use your Health Savings Account (HSA) to pay for services and products at your favorite health and wellness providers.
+</p>
+
+    <button class="health-btn">
+       
+          Get Started 
+           <span class="stroke">
+            <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 448 512" height="1em"
+   width="1em" xmlns="http://www.w3.org/2000/svg">
+   <path d="M438.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-160-160c-12.5-12.5-32.8-12.5-45.3
+    0s-12.5 32.8 0 45.3L338.8 224 32 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l306.7
+    0L233.4 393.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l160-160z"></path></svg></span></button>     
+        </button>  
+</div>
+</div>
+</div>
+</div>
+</div>
+
+<div class="container">
+  <div class="step">
+    <div class="number">01</div>
+  </div>
+  <div class="step">
+    <div class="number">02</div>
+  </div>
+  <div class="step">
+    <div class="number">03</div>
+  </div>
+</div>
+
+
+<!-- <nav class="steps">
+    <h1 class="step-head">
+        Get started in 3 easy steps...
+    </h1>
+<ol class="list">
+<li class="li">01</li>
+<div class="div">
+<h2>Discover</h2>
+<p>Explore our selection of health and wellness centers near you.</p>
+</div>
+
+<li class="li">02</li>
+<div class="div">
+<h2>Connect</h2>
+<p>Select one of your choice to Visit and access their services.</p>
+</div>
+
+<li class="li">03</li>
+<div class="div">
+<h2>Make Payment</h2>
+<p>  
+    Use your Health Savings Account (HSA) to pay for health and wellness products and services.
+</p>
+</div>
+</ol>
+
+
+</nav> -->
 </body>
 </html>
