--- a/hub.html
+++ b/hub.html
@@ -282,6 +282,27 @@
   </div>
 </div>
 
+<div class="center">
+  <h3 class="centerhead">
+    Health and Wellness centers curated for you
+  </h3>
+  <button class="btn-centers">
+    find Centers Nearby
+  </button>
+<button class="btn-arrow">
+  <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 24 24" class="h-[48px] w-[70px]" height="3em" width="3em" xmlns="http://www.w3.org/2000/svg">…
+<path d="M10.78 19.03a.75.75 0 0 1-1.06 0l-6.25-6.25a.75.75 0 0 1 0-1.06l6.25-6.25a.749.749 0 0 1 1.275.326.749.749 0 0 1-.215.734L5.81 11.5h14.44a.75.75 0 0 1 0 1.5H5.81l4.97 4.97a.75.75 0 0 1 0 1.06Z">
+</path>
+</svg>
+</button>
+<button class="btn-arrow">
+  <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 24 24" class="h-[48px] w-[70px]" height="3em" width="3em" xmlns="http://www.w3.org/2000/svg">
+  <path d="M13.22 19.03a.75.75 0 0 1 0-1.06L18.19 13H3.75a.75.75 0 0 1 0-1.5h14.44l-4.97-4.97a.749.749 0 0 1 .326-1.275.749.749 0 0 1 .734.215l6.25 6.25a.75.75 0 0 1 0 1.06l-6.25 6.25a.75.75 0 0 1-1.06 0Z">
+  </path></svg>
+</button>
+</div>
+
+
 
 <!-- <nav class="steps">
     <h1 class="step-head">
