new text, annimations and dis`play`

--- a/hub.html
+++ b/hub.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Wellness Hub | Clafiya| Get Quality</title>
+<link rel="icon" href="clafiya/favicon.ico">
+
     <link rel="stylesheet" href="hub.css" />
+
+
       <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Aboreto&family=Fraunces:ital,opsz,wght@0,9..144,100..900;1,9..144,100..900&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
@@ -270,26 +274,60 @@
 </div>
 </div>
 
+
 <div class="container">
-  <div class="step">
+
+  <h2 class="easy-heading">
+    Get started in 3 easy steps...
+  </h2>
+
+ <div class="easystep">
+   <div class="step">
     <div class="number">01</div>
+    <span class="line"></span>
   </div>
-  <div class="step">
+ <div class="grid">
+   <h3 class="head">Discover</h3>
+  <p class="paras">Explore our selection of health and wellness centers near you.</p>
+ </div>
+</div>
+<div class="easystep">
+    <div class="step">
     <div class="number">02</div>
+    <span class="line"></span>
   </div>
-  <div class="step">
+<div class="grid">
+     <h3 class="head">Connect</h3>
+  <p class="paras">select one of your choice to visit and access their services.</p>
+</div>
+</div>
+ <div class="easystep">
+   <div class="step">
     <div class="number">03</div>
   </div>
+  <div class="grid">
+     <h3 class="head">Make payment </h3>
+ <p class="paras" style="width: 67%;">Use your Health Savings Account (HSA) to pay for health and wellness products and services.</p>
+  </div>
 </div>
-
+ </div>
+<div class="all">
 <div class="center">
-  <h3 class="centerhead">
+  <div class="center-heading">
+  <div class="centerhead">
+    <h2>
     Health and Wellness centers curated for you
-  </h3>
-  <button class="btn-centers">
+  </h2>
+  </div>
+<div class="center-action">
+ <div>
+   <button class="btn-centers">
     find Centers Nearby
   </button>
-<button class="btn-arrow">
+ </div>
+
+<div class="center-btn">
+  <button class="btn-arrow">
   <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 24 24" class="h-[48px] w-[70px]" height="3em" width="3em" xmlns="http://www.w3.org/2000/svg">…
 <path d="M10.78 19.03a.75.75 0 0 1-1.06 0l-6.25-6.25a.75.75 0 0 1 0-1.06l6.25-6.25a.749.749 0 0 1 1.275.326.749.749 0 0 1-.215.734L5.81 11.5h14.44a.75.75 0 0 1 0 1.5H5.81l4.97 4.97a.75.75 0 0 1 0 1.06Z">
 </path>
@@ -298,12 +336,67 @@
 <button class="btn-arrow">
   <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 24 24" class="h-[48px] w-[70px]" height="3em" width="3em" xmlns="http://www.w3.org/2000/svg">
   <path d="M13.22 19.03a.75.75 0 0 1 0-1.06L18.19 13H3.75a.75.75 0 0 1 0-1.5h14.44l-4.97-4.97a.749.749 0 0 1 .326-1.275.749.749 0 0 1 .734.215l6.25 6.25a.75.75 0 0 1 0 1.06l-6.25 6.25a.75.75 0 0 1-1.06 0Z">
-  </path></svg>
+  </path>
+</svg>
 </button>
+</div>
+</div>
+</div>
 </div>
 
 
+<div class="swipe-slide">
+  <div class="slider">
+<div class="slider-one" style="z-index: 1;">
+  <h4>iFitness Gbagada</h4>
+  <p class="slide-p">PLOT 279, Block N, Gbagada Scheme 1</p>
+  <button class="open-btn">
+    Open
+  </button>
+</div>
+</div>
 
+<div class="slider">
+<div class="slider-two" style="z-index: 2;">
+  <h4>So Fresh, Ogudu Outlet</h4>
+  <p class="slide-p">40b, Ogudu Road, Ojota, Lagos</p>
+  <button class="open-btn">
+    Open
+  </button>
+</div>
+</div>
+
+<div class="slider">
+<div class="sliderthree" style="z-index: 3;">
+  <h4>3 Lekki Expressway, Oriental Hotel 4th floor </h4>
+  <p class="slide-p">PLOT 279, Block N, Gbagada Scheme 1</p>
+  <button class="open-btn">
+    Open
+  </button>
+</div>
+</div>
+</div>
+
+
+</div>
+
+<footer class="last-footer">
+  <span>
+    <img style="vertical-align: middle;" src="clafiya/whatsapp (2).svg" alt="whatsapp" width="52" height="57">
+  </span>
+  </footer>
+<div class="wrapper">
+  <ol>
+    <li><span>Diagonist</span></li>
+    <li><span>health care</span></li>
+    <li><span>dental care</span></li>
+    <li><span>spas</span></li>
+    <li><span>gym</span></li>
+    <li><span>hospitals</span></li>
+    <li><span>eye care</span></li>
+   
+  </ol>
+</div>
 <!-- <nav class="steps">
     <h1 class="step-head">
         Get started in 3 easy steps...
