--- a/hub.html
+++ b/hub.html
@@ -310,6 +310,7 @@
   </div>
 </div>
  </div>
+ <div class="all">
 <div class="center">
   <div class="center-heading">
   <div class="centerhead">
@@ -346,35 +347,105 @@
 <div class="swipe-slide">
   <div class="slider">
 <div class="slider-one" style="z-index: 1;">
-  <h4>iFitness Gbagada</h4>
-  <p class="slide-p">PLOT 279, Block N, Gbagada Scheme 1</p>
+  <img src="clafiya/ifitness.png" alt="#">
+  <h4 class="openhead" style="margin-left: 17px;">iFitness Gbagada</h4>
+  <div class="open">
+    <p class="slide-p">PLOT 279, Block N, Gbagada Scheme 1</p>
   <button class="open-btn">
     Open
   </button>
+  </div>
 </div>
 </div>
 
 <div class="slider">
 <div class="slider-two" style="z-index: 2;">
-  <h4>So Fresh, Ogudu Outlet</h4>
-  <p class="slide-p">40b, Ogudu Road, Ojota, Lagos</p>
+  <img src="clafiya/partner.png" alt="#">
+  <h4 class="openhead" style="margin-left: 27px;">So Fresh, Ogudu Outlet</h4>
+ <div class="open">
+   <p class="slide-p">40b, Ogudu Road, Ojota, Lagos</p>
   <button class="open-btn">
     Open
   </button>
+ </div>
 </div>
 </div>
 
 <div class="slider">
 <div class="sliderthree" style="z-index: 3;">
-  <h4>3 Lekki Expressway, Oriental Hotel 4th floor </h4>
-  <p class="slide-p">PLOT 279, Block N, Gbagada Scheme 1</p>
+  <img src="clafiya/partner(1).png" alt="#">
+  <h4 class="openhead" style="margin-left: 15px;">3 Lekki Expressway, Oriental Hotel 4th floor </h4>
+  <div class="open">
+    <p class="slide-p">PLOT 279, Block N, Gbagada Scheme 1</p>
   <button class="open-btn">
     Open
   </button>
-</div>
+  </div>
 </div>
 </div>
 
+<div class="slider">
+  <div class="sliderfour" style="z-index: 4;">
+    <img src="clafiya/partner(2).png" alt="#">
+    <h4 class="openhead">Medplus Magodo
+    </h4>
+  <div class="open">
+    <p class="slide-p">Adekunle</p>
+  <button class="open-btn">
+    Open
+  </button>
+  </div>
+  </div>
+</div>
+</div>
+
+
+ <div class="join-container">
+  <div class="two">
+    <h1 class="join-heading">
+      Join our Health and Wellness Hub
+    </h1>
+   <p class="join_para">
+    Join our growing Health and Wellness Hub to boost your business's visibility and growth. As a partner with Clafiya, you'll reach new customers, boost sales, and be part of our mission to provide exceptional care.
+  </p>
+      
+<div class="join-tags">
+<div class="join-wallet">
+  <img src="clafiya/icon7.svg" alt="#"  width="40">
+<div class="join-content">
+ <h4 class="join-head2">Get Started</h4>
+      <p class="join-para">Fill out a simple form</p>
+</div>
+</div>
+   
+<div class="join-wallet">
+  <img src="clafiya/list(1).svg" alt="#" width="40" >
+<div class="join-content"> <h4 class="join-head2"> Connect</h4>
+
+<p class="join-para">
+  Our team reaches out to you
+</p>
+</div>
+  
+</div>
+<div class="join-wallet"> 
+  <img src="clafiya/list(2).svg" alt="#" width="40">
+<div class="join-content"> <h4 class="join-head2">Grow</h4>
+<p class="join-para"> Get your business listed and increase your sales
+</div>
+
+</div>
+   <button class="add-btn">    
+          Add Your Business 
+           <span class="stroke">
+  <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 24 24" height="20" width="20" xmlns="http://www.w3.org/2000/svg">
+           <path d="M13.22 19.03a.75.75 0 0 1 0-1.06L18.19 13H3.75a.75.75 0 0 1 0-1.5h14.44l-4.97-4.97a.749.749 0 0 1 .326-1.275.749.749 0 0 1 .734.215l6.25 6.25a.75.75 0 0 1 0 1.06l-6.25 6.25a.75.75 0 0 1-1.06 0Z"></path></svg>
+           </span>
+        </button>
+</div>
+</div>
+
+</div>
 </div>
 
 <footer class="last-footer">
