change of fonts , width and aligns

--- a/hub.html
+++ b/hub.html
@@ -315,11 +315,11 @@
   </div>
 </div>
 </div>
-<div class="animation">
+<!-- <div class="animation">
   <span><img src="clafiya/onboard10.png" alt="#"></span>
   <span><img class="transition-image" src="clafiya/onboard11.png" alt="#"></span>
   <span><img class="transition-image"src="clafiya/onboard12.png" alt="#"></span>
-</div>
+</div> -->
  </div>
  </div>
  <div class="all">
@@ -354,7 +354,6 @@
 </div>
 </div>
 </div>
-
 
 <div class="swipe-slide">
   <div class="slider">
@@ -410,7 +409,6 @@
   </div>
 </div>
 </div>
-
 
  <div class="join-container">
   <div class="join">
@@ -477,7 +475,7 @@
          </div>
         <div class="swiper-two">
 				<!-- Card 1 -->
-				<article style="height: 37vh; " class="card">
+				<article style="height: 57vh; width: 400vh;" class="card">
 					<p class="center-you" style="font-size: 1.2rem;">
 					clafiya's Health and wellness Hub has been a game-changer for us.
           The visibility we've gained has boosted our sales and help us connect with customers we wouldn't have reached otherwise
@@ -499,7 +497,7 @@
 					</div>
 				</article>
 
-          <article style="height: 57vh; " class="card">
+          <article style="height: 62vh; width: 400vh;" class="card">
 					<p class="center-you" style="font-size: 1.2rem;">
 						We are so grateful to be part of Clafiya's Health & wellness Hub . 
             The payment process through the Health saving Accout (HSA)
@@ -521,10 +519,9 @@
             </span>
 					</div>
 				</article>
- 
 
         		<!-- Card 3 -->
-				<article style="height: 50vh; " class="card">
+				<article style="height: 65vh; width: 400vh;" class="card">
 					<p class="center-you" style="font-size: 1.2rem;">
 						Being part of Clafiya Health & wellness Hub has being amazing.
             We've managed to touch base with people and it feels good to be part of their fitness journey.
@@ -547,7 +544,7 @@
 					</div>
 				</article>
 
-         <article style="height: 60vh;" class="card">
+         <article style="height: 60vh; width:400vh;" class="card">
 					<p class="center-you" style="font-size: 1.1rem;">
 				Joining Clafiya Health & wellness Hub was one of  one of my best decisions in 2023.
         It's always a joy to hear new customers , eager to try out skincare product,
@@ -570,7 +567,7 @@
             </span>
 					</div>
 				</article>
-         <article style="height: 50vh; " class="card">
+         <article style="height: 58vh; width: 400vh;" class="card">
 					<p class="center-you" style="font-size: 1.2rem;">
 				since i joined Clafiya Health & wellness Hub, we've seen significant increase in new customers.
         The Hub has not only expanded our reach but also made it easier for people to discover the gym
@@ -709,7 +706,7 @@
      <p class="foot-paragragh"><a href="#">hi@clafiya.com</a></p>
     </div> 
     <div class="flex-foot">
-<h2 style="font-size: 64px; font-family: fraunces;">Join our community</h2>
+<h2 style="font-size: 62px; font-family: fraunces;">Join our community</h2>
 <p class="foot-para">Need someone to share your health goals with?
   Join our community of smart savers! Sign Up for our newsletter today
 </p>
