--- a/hub.html
+++ b/hub.html
@@ -315,11 +315,11 @@
   </div>
 </div>
 </div>
-<!-- <div class="animation">
+<div class="animation">
   <span><img src="clafiya/onboard10.png" alt="#"></span>
   <span><img class="transition-image" src="clafiya/onboard11.png" alt="#"></span>
   <span><img class="transition-image"src="clafiya/onboard12.png" alt="#"></span>
-</div> -->
+</div>
  </div>
  </div>
  <div class="all">
@@ -475,7 +475,7 @@
          </div>
         <div class="swiper-two">
 				<!-- Card 1 -->
-				<article style="height: 57vh; width: 400vh;" class="card">
+				<article style="height: 57vh; width: 400vh; z-index: 1;" class="card">
 					<p class="center-you" style="font-size: 1.2rem;">
 					clafiya's Health and wellness Hub has been a game-changer for us.
           The visibility we've gained has boosted our sales and help us connect with customers we wouldn't have reached otherwise
@@ -497,7 +497,7 @@
 					</div>
 				</article>
 
-          <article style="height: 62vh; width: 400vh;" class="card">
+          <article style="height: 62vh;z-index: 2; width: 400vh;" class="card">
 					<p class="center-you" style="font-size: 1.2rem;">
 						We are so grateful to be part of Clafiya's Health & wellness Hub . 
             The payment process through the Health saving Accout (HSA)
@@ -521,7 +521,7 @@
 				</article>
 
         		<!-- Card 3 -->
-				<article style="height: 65vh; width: 400vh;" class="card">
+				<article style="height: 65vh;z-index: 3; width: 400vh;" class="card">
 					<p class="center-you" style="font-size: 1.2rem;">
 						Being part of Clafiya Health & wellness Hub has being amazing.
             We've managed to touch base with people and it feels good to be part of their fitness journey.
@@ -544,7 +544,7 @@
 					</div>
 				</article>
 
-         <article style="height: 60vh; width:400vh;" class="card">
+         <article style="height: 60vh;z-index: 4; width:400vh;" class="card">
 					<p class="center-you" style="font-size: 1.1rem;">
 				Joining Clafiya Health & wellness Hub was one of  one of my best decisions in 2023.
         It's always a joy to hear new customers , eager to try out skincare product,
@@ -567,7 +567,7 @@
             </span>
 					</div>
 				</article>
-         <article style="height: 58vh; width: 400vh;" class="card">
+         <article style="height: 58vh;z-index: 5; width: 400vh;" class="card">
 					<p class="center-you" style="font-size: 1.2rem;">
 				since i joined Clafiya Health & wellness Hub, we've seen significant increase in new customers.
         The Hub has not only expanded our reach but also made it easier for people to discover the gym
