--- a/hub.html
+++ b/hub.html
@@ -24,7 +24,6 @@
         <p class="para">Feel something off? Don’t guess—get instant answers from our Free AI Symptom Checker</p>
       <span class="spa-btn">
          <button class="spa">Chat Now <span class="img-stroke"><img src="clafiya/whatsapp.svg" alt="whatsapp">
-        </span>
       </span>
       <div>
       </div> </button>
@@ -237,16 +236,19 @@
     </span>   
    </div>
    </div>
+
 <p class="paragragh">Access a marketplace of holistic health and wellness merchants, such as hospitals, pharmacies, spas, gyms, mental health, skincare, and more to support you on your wellness journey.</p>
      <div class="hsa-tags">
 <div class="hsa-wallet">
-  <img src="clafiya/easy.png" alt="easy" >
-<div class="wallet-content"> <h4 class="wallet-head2">Easy access to top-tier care</h4>
+  <img src="clafiya/easy.png" alt="easy" height="45" width="40" >
+<div class="wallet-content">
+   <h4 class="wallet-head2">Easy access to top-tier care</h4>
   <p class="wallet-para">Discover trusted health and wellness centers, from hospitals and pharmacies to spas and gyms, for all your needs.</p>
 </div>
 </div>
    
-<div class="hsa-wallet"><img src="clafiya/benefits.png" alt="benefits" >
+<div class="hsa-wallet">
+ <img src="clafiya/benefits.png" alt="benefits" width="40" height="45" >
 <div class="wallet-content"> <h4 class="wallet-head2">Exclusive discounts </h4>
 
 <p class="wallet-para">Get up to 30% off health and wellness products and services from our partners.
@@ -254,11 +256,12 @@
 </div>
   
 </div>
-<div class="hsa-wallet"> <img src="clafiya/quick.png" alt="quick" >
+<div class="hsa-wallet"> <img src="clafiya/quick.png" alt="quick" width="40"  height="45">
 <div class="wallet-content"> <h4 class="wallet-head2">Quick, easy payment</h4>
 <p class="wallet-para"> Use your Health Savings Account (HSA) to pay for services and products at your favorite health and wellness providers.
 </p>
-
+</div>
+</div>
     <button class="health-btn">
        
           Get Started 
@@ -314,12 +317,9 @@
  <p class="paras" style="width: 67%;">Use your Health Savings Account (HSA) to pay for health and wellness products and services.</p>
   </div>
 </div>
+
 </div>
-<div class="animation">
-  <span><img src="clafiya/onboard10.png" alt="#"></span>
-  <span><img class="transition-image" src="clafiya/onboard11.png" alt="#"></span>
-  <span><img class="transition-image"src="clafiya/onboard12.png" alt="#"></span>
-</div>
+<div class="animated-box"></div>
  </div>
  </div>
  <div class="all">
@@ -475,14 +475,16 @@
          </div>
         <div class="swiper-two">
 				<!-- Card 1 -->
-				<article style="height: 57vh; width: 400vh; z-index: 1;" class="card">
-					<p class="center-you" style="font-size: 1.2rem;">
+         <div class="article">
+
+				<article class="card">
+					<p class="center-you" style="font-size: 1.2rem; z-index: 0;">
 					clafiya's Health and wellness Hub has been a game-changer for us.
           The visibility we've gained has boosted our sales and help us connect with customers we wouldn't have reached otherwise
 					</p>
 					<div class="footer">
 						<div class="profile">
-							<img src="clafiya/female.svg" alt="">
+							<img src="clafiya/female.svg" alt="m">
 							<div class="meta">
 								<div class="name">Aishat Johnson</div>
 								<div class="handle">CEO, spa</div>
@@ -497,8 +499,8 @@
 					</div>
 				</article>
 
-          <article style="height: 62vh;z-index: 2; width: 400vh;" class="card">
-					<p class="center-you" style="font-size: 1.2rem;">
+          <article class="card">
+					<p class="center-you" style="font-size: 1.2rem; z-index: 1;">
 						We are so grateful to be part of Clafiya's Health & wellness Hub . 
             The payment process through the Health saving Accout (HSA)
             has made it more covinient for our custosmers and certainly attracted more people to our service.
@@ -521,8 +523,8 @@
 				</article>
 
         		<!-- Card 3 -->
-				<article style="height: 65vh;z-index: 3; width: 400vh;" class="card">
-					<p class="center-you" style="font-size: 1.2rem;">
+				<article class="card">
+					<p class="center-you" style="font-size: 1.2rem; z-index: 2;">
 						Being part of Clafiya Health & wellness Hub has being amazing.
             We've managed to touch base with people and it feels good to be part of their fitness journey.
             The Hub has given us a platform we needed to expand our reach.
@@ -544,8 +546,8 @@
 					</div>
 				</article>
 
-         <article style="height: 60vh;z-index: 4; width:400vh;" class="card">
-					<p class="center-you" style="font-size: 1.1rem;">
+         <article class="card">
+					<p class="center-you" style="font-size: 1.1rem; z-index: 3;">
 				Joining Clafiya Health & wellness Hub was one of  one of my best decisions in 2023.
         It's always a joy to hear new customers , eager to try out skincare product,
         say they found us through the Hub , the hub is helping us make our mark in the wellness community
@@ -567,8 +569,8 @@
             </span>
 					</div>
 				</article>
-         <article style="height: 58vh;z-index: 5; width: 400vh;" class="card">
-					<p class="center-you" style="font-size: 1.2rem;">
+         <article class="card">
+					<p class="center-you" style="font-size: 1.2rem; z-index: 4;">
 				since i joined Clafiya Health & wellness Hub, we've seen significant increase in new customers.
         The Hub has not only expanded our reach but also made it easier for people to discover the gym
 					</p>
@@ -590,13 +592,12 @@
 				</article>
         
         </div>
+        </div>
 </div>
 </section>
-
 <section class="question">
 <h2 style="width: 30%; font-size: 48px; font-family: 'fraunces'; text-align: start; padding-left: 50px;">Frequently Asked Questions</h2>
-<div class="accordion">
-<div class="accordion-item"><button class="ques-btn">What is Clafiya's Health & Wellness Hub?</button><p>
+<!-- <div class="accordion-item"><button class="ques-btn">What is Clafiya's Health & Wellness Hub?</button><p>
 <span class="bor">
   <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 448 512" class="font-bold" height="1em" width="1em" xmlns="http://www.w3.org/2000/svg">…<path d="M256 80c0-17.7-14.3-32-32-32s-32 14.3-32 32V224H48c-17.7 0-32 14.3-32 32s14.3 32 32 32H192V432c0 17.7 14.3 32 32 32s32-14.3 32-32V288H400c17.7 0 32-14.3 32-32s-14.3-32-32-32H256V80z">
 </path></svg>
@@ -621,29 +622,85 @@
 </div>
 <div class="accordion-item"><button class="ques-btn">What kind of merchants do you have on the Health & Wellness Hub?</button>
 <p>
+
 <span class="bor">
   <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 448 512" class="font-bold" height="1em" width="1em" xmlns="http://www.w3.org/2000/svg">…<path d="M256 80c0-17.7-14.3-32-32-32s-32 14.3-32 32V224H48c-17.7 0-32 14.3-32 32s14.3 32 32 32H192V432c0 17.7 14.3 32 32 32s32-14.3 32-32V288H400c17.7 0 32-14.3 32-32s-14.3-32-32-32H256V80z">
 </path></svg>
 </span>
-</p>
+</p>  
+</div> -->
+<div class="accordion">
+  <div class="accordion1">
+<input type="checkbox" id="accordion-toggle-1" hidden>
+<label for="accordion-toggle-1" class="accordion-header" style="font-size: 19px; font-weight: 500;font-family: outfit, sans-serif;">What is Clafiya's Health & Wellness Hub?</label>
+<div class="accordion-content">
+    <div class="min">
+      <p class="close">Our Health & Wellness Hub is a comprehensive marketplace that curates and lists a wide range of health and wellness providers, from medical facilities to holistic wellness 
+        centers, all in one place for your convenience</p>
+    </div>
 </div>
-<div class="accordion-item"><button class="ques-btn">How do i pay for sevices/products at these merchants?</button>
+</div>
+<div class="accordion2">
+  <input type="checkbox" id="accordion-toggle-1" hidden>
+<label for="accordion-toggle-1" class="accordion-header" style="font-size: 19px; font-weight: 500;font-family: outfit, sans-serif;">Why did we build a Health & wellness Hub?</label>
+<div class="accordion-content1">
+  <div class="min">
+    <p>We built the Health & Wellness Hub to help our customers easily discover health and wellness providers in their communities. In addition,
+       it serves as a platform for these providers to 
+       expand their customer base and tap into the benefits 
+       of Health Savings Accounts (HSAs).</p>
+</div>
+</div>
+</div>
+<div class="accordion3">
+  <input type="checkbox" id="accordion-toggle-1" hidden>
+<label for="accordion-toggle-1" class="accordion-header" style="font-size: 19px; font-weight: 500;font-family: outfit, sans-serif;">How does the Health & Wellness Hub work?</label>
+<div class="accordion-content2">
+  <div class="min">
+      <p>The Health & Wellness Hub operates in three easy steps:
+- Discover: Explore our selection of health and wellness centers.
+- Connect: Visit the one nearest to you and access their services.
+- Make payments: Use your Health Savings Account (HSA) to pay for health and wellness products and services.</p>
+</div>
+</div>
+</div>
+<div class="accordion4">
+  <input type="checkbox" id="accordion-toggle-1" hidden>
+<label for="accordion-toggle-1" class="accordion-header" style="font-size: 19px; font-weight: 500;font-family: outfit, sans-serif;">What kind of merchants do you have on the Health & wellness Hub?</label>
+<div class="accordion-content3">
+  <div class="min">
+  <p>We have a variety of providers on our Health & Wellness Hub, including hospitals, pharmacies, diagnostic units, mental health care centers, gyms, spas, and many more.</p>
+</div>
+</div>
+<div class="accordion5">
+  <input type="checkbox" id="accordion-toggle-1" hidden>
+<label for="accordion-toggle-1" class="accordion-header" style="font-size: 19px; font-weight: 500;font-family: outfit, sans-serif;">How do i pay for services/products at these merchants?</label>
+<div class="accordion-content4">
+    <p>Once you have finalized your desired service or product with the provider, you can then proceed to make payments using your Health Savings Account (HSA)</p>
+</div>
+</div>
+</div>
+<div class="accordion6">
+  <input type="checkbox" id="accordion-toggle-1" hidden>
+<label for="accordion-toggle-1" class="accordion-header" style="font-size: 19px; font-weight: 500;font-family: outfit, sans-serif;">What happens if there is an issue with paymet using my HSA?</label>
+<div class="accordion-content5">
+  <div class="min">
+    <p>If there is an issue with payment using your HSA, please contact our customer support team. They are always ready to support you.</p>
+</div>
+</div>
+</div>
+<!-- <div class="accordion-item"><button class="ques-btn">What happens if there is an Issue with payment using my HSA?</button>
 <p>
 <span class="bor">
   <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 448 512" class="font-bold" height="1em" width="1em" xmlns="http://www.w3.org/2000/svg">…<path d="M256 80c0-17.7-14.3-32-32-32s-32 14.3-32 32V224H48c-17.7 0-32 14.3-32 32s14.3 32 32 32H192V432c0 17.7 14.3 32 32 32s32-14.3 32-32V288H400c17.7 0 32-14.3 32-32s-14.3-32-32-32H256V80z">
 </path></svg>
 </span>
 </p>
+
+</div> -->
 </div>
-<div class="accordion-item"><button class="ques-btn">What happens if there is an Issue with payment using my HSA?</button>
-<p>
-<span class="bor">
-  <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 448 512" class="font-bold" height="1em" width="1em" xmlns="http://www.w3.org/2000/svg">…<path d="M256 80c0-17.7-14.3-32-32-32s-32 14.3-32 32V224H48c-17.7 0-32 14.3-32 32s14.3 32 32 32H192V432c0 17.7 14.3 32 32 32s32-14.3 32-32V288H400c17.7 0 32-14.3 32-32s-14.3-32-32-32H256V80z">
-</path></svg>
-</span>
-</p>
-</div>
-</div>
+
+
 </section>
 <div class="faq-page">
   <p>You can also visit our full 
