clip-path added and new styles

--- a/hub.html
+++ b/hub.html
@@ -505,8 +505,19 @@
             The payment process through the Health saving Accout (HSA)
             has made it more covinient for our custosmers and certainly attracted more people to our service.
 					</p>
-					<div class="footer">
-						<div class="profile">
+					<div style=" position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  height: 100px;
+  background: #e9d8fd; /* purple shade */
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px; 
+ clip-path: path(M0,40 Q60,0 120,20 T240,20 T360,20 T480,40 L480,100 L0,100 Z);	">
+						<div style="display: flex;
+  gap: 10px;">
 							<img src="clafiya/female.svg" alt="" />
 							<div class="meta">
 								<div class="name">Augustina Ochioju</div>
