--- a/hub.html
+++ b/hub.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Wellness Hub | Clafiya| Get Quality</title>
+    <title>Wellness Hub | Clafiya| Get Quantity</title>
 <link rel="icon" href="clafiya/favicon.ico">
 
     <link rel="stylesheet" href="hub.css" />
@@ -475,19 +475,17 @@
          </div>
         <div class="swiper-two">
 				<!-- Card 1 -->
-         <div class="article">
-
-				<article class="card">
-					<p class="center-you" style="font-size: 1.2rem; z-index: 0;">
-					clafiya's Health and wellness Hub has been a game-changer for us.
-          The visibility we've gained has boosted our sales and help us connect with customers we wouldn't have reached otherwise
+				<article style="height: 37vh;" class="card">
+					<p class="center-you" style="font-size: 1.2rem;">
+						Nothing I hate more than an overnight sickness. Too weak to go to
+						the hospital. Clafiya to the rescue.
 					</p>
 					<div class="footer">
 						<div class="profile">
-							<img src="clafiya/female.svg" alt="m">
+							<img src="clafiya/female.svg" alt="">
 							<div class="meta">
-								<div class="name">Aishat Johnson</div>
-								<div class="handle">CEO, spa</div>
+								<div class="name">Human Miracle</div>
+								<div class="handle">@ruthdulac</div>
 							</div>
 						</div>
 						<span class="icon">
@@ -499,25 +497,14 @@
 					</div>
 				</article>
 
-          <article class="card">
-					<p class="center-you" style="font-size: 1.2rem; z-index: 1;">
-						We are so grateful to be part of Clafiya's Health & wellness Hub . 
-            The payment process through the Health saving Accout (HSA)
-            has made it more covinient for our custosmers and certainly attracted more people to our service.
+          <article style="height: 57vh;" class="card">
+					<p class="center-you" style="font-size: 1.2rem;">
+						Clafiya has been a game-changer for our business. We've been able to
+						provide quality healthcare to our employees at a fraction of the
+						cost of traditional providers.
 					</p>
-					<div style=" position: absolute;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  height: 100px;
-  background: #e9d8fd; /* purple shade */
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 20px; 
- clip-path: path(M0,40 Q60,0 120,20 T240,20 T360,20 T480,40 L480,100 L0,100 Z);	">
-						<div style="display: flex;
-  gap: 10px;">
+					<div class="footer">
+						<div class="profile">
 							<img src="clafiya/female.svg" alt="" />
 							<div class="meta">
 								<div class="name">Augustina Ochioju</div>
@@ -532,20 +519,21 @@
             </span>
 					</div>
 				</article>
+ 
 
         		<!-- Card 3 -->
-				<article class="card">
-					<p class="center-you" style="font-size: 1.2rem; z-index: 2;">
-						Being part of Clafiya Health & wellness Hub has being amazing.
-            We've managed to touch base with people and it feels good to be part of their fitness journey.
-            The Hub has given us a platform we needed to expand our reach.
+				<article style="height: 50vh;" class="card">
+					<p class="center-you" style="font-size: 1.2rem;">
+						The past few days have been crazy for me. @clafiya have been there
+						through each day. Reliability is a beautiful thing. Told me my meds
+						will be delivered by 10am and I got it by the exact time.
 					</p>
 					<div class="footer">
 						<div class="profile">
 							<img src="clafiya/male.svg" alt="" />
 							<div class="meta">
-								<div class="name">Iheoma Anyawu </div>
-								<div class="handle">Reowned personal Trainer</div>
+								<div class="name">DC Okoli</div>
+								<div class="handle">@dcokoli</div>
 							</div>
 						</div>
 				<span class="icon">
@@ -557,19 +545,17 @@
 					</div>
 				</article>
 
-         <article class="card">
-					<p class="center-you" style="font-size: 1.1rem; z-index: 3;">
-				Joining Clafiya Health & wellness Hub was one of  one of my best decisions in 2023.
-        It's always a joy to hear new customers , eager to try out skincare product,
-        say they found us through the Hub , the hub is helping us make our mark in the wellness community
-      
+         <article style="height: 60vh;" class="card">
+					<p class="center-you" style="font-size: 1.1rem;">
+					Checked my BP last year and i got 140/something reading , i never went back to the hospital because i always feared that if you naim and you go find something.
+      Clafiya came to our office a few weeks ago and did a free health gare for us, so i decided to check again, got 149/91.
 					</p>
 					<div class="footer">
 						<div class="profile">
 							<img src="clafiya/male.svg" alt="male">
 							<div class="meta">
-								<div class="name">Tobi Adeshina</div>
-								<div class="handle">owner skincare product store</div>
+								<div class="name">Seye dele</div>
+								<div class="handle">@seyedele</div>
 							</div>
 						</div>
 						<span class="icon">
@@ -580,17 +566,17 @@
             </span>
 					</div>
 				</article>
-         <article class="card">
-					<p class="center-you" style="font-size: 1.2rem; z-index: 4;">
-				since i joined Clafiya Health & wellness Hub, we've seen significant increase in new customers.
-        The Hub has not only expanded our reach but also made it easier for people to discover the gym
+         <article style="height: 60vh;" class="card">
+					<p class="center-you" style="font-size: 1.1rem;">
+					Checked my BP last year and i got 140/something reading , i never went back to the hospital because i always feared that if you naim and you go find something.
+      Clafiya came to our office a few weeks ago and did a free health gare for us, so i decided to check again, got 149/91.
 					</p>
 					<div class="footer">
 						<div class="profile">
 							<img src="clafiya/male.svg" alt="male">
 							<div class="meta">
-								<div class="name">John Nwosu</div>
-								<div class="handle">Owner fitness center</div>
+								<div class="name">Seye dele</div>
+								<div class="handle">@seyedele</div>
 							</div>
 						</div>
 						<span class="icon">
@@ -601,8 +587,12 @@
             </span>
 					</div>
 				</article>
+
+
+
+		
+
         
-        </div>
         </div>
 </div>
 </section>
