--- a/index.html
+++ b/index.html
@@ -602,7 +602,7 @@ Headache,Migrane
 <div class="speak-con">
 <span>
   <img  class="health-image" src="clafiya/sickness17.svg " alt="sickness17" width="168" height="178">
-</span>
+</span>.car
 <p class="swipe-paragragh">
 Diarrhoea, Stomach Upset,Constipation
 </p>
